Polishing.
Remove obsolete tests, deprecated methods, and improve tooltip rendering with `HtmlChunk`.